fix: color of navbar li on mobile

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -57,17 +57,12 @@
     }
 
     .left {
-        justify-content: start;
-        padding-left: 0.7rem;
     }
 
     .right {
-        justify-content: end;
-        padding-right: 0.7rem;
     }
 
     .center {
-        justify-content: center;
     }
 
     .element {
